--- a/package.json
+++ b/package.json
@@ -3,17 +3,41 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:ios": "react-native run-ios"
+    "start:ios": "react-native run-ios",
+    "start:android": "react-native run-android"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-gesture-handler": "^1.0.0",
+    "react-native-prompt-android": "^0.3.3",
+    "react-native-segmented-control-tab": "^3.2.2",
+    "react-native-sqlite-storage": "^3.3.4",
+    "react-native-svg": "^6.3.1",
+    "react-native-swipe-gestures": "^1.0.2",
+    "react-native-tab-view": "^0.0.78",
+    "react-native-vector-icons": "^4.6.0",
+    "victory-native": "^0.17.4"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.3",
+    "@types/react": "^16.3.14",
+    "@types/react-native": "^0.55.14",
     "babel-jest": "22.4.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
+    "concurrently": "^3.5.1",
+    "eslint": "^4.19.1",
     "jest": "22.4.3",
-    "react-test-renderer": "16.3.1"
+    "moment": "^2.22.1",
+    "numeral": "^2.0.6",
+    "pretty-format": "^23.0.1",
+    "react-test-renderer": "16.3.1",
+    "rimraf": "^2.6.2"
   },
   "jest": {
     "preset": "react-native"
