--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-segmented-control-tab": "^3.2.2",
     "react-native-sqlite-storage": "^3.3.4",
     "react-native-svg": "^6.3.1",
+    "react-native-svg-charts": "^5.1.1",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-view": "^0.0.78",
     "react-native-vector-icons": "^4.6.0",
